--- a/src/App.css
+++ b/src/App.css
@@ -161,3 +161,28 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+/* pagination styling */
+
+.pagination {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5rem;
+  font-size: 1.2rem;
+  gap: 5px;
+}
+.pagination .page-num{
+  padding: 8px 15px;
+  cursor: pointer;
+  border-radius: 3px;
+  font-weight: 400;
+}
+.pagination .page-num:hover{
+  background-color: #FF2625;
+  color:#fff;
+}
+.pagination .active {
+  background-color: #FF2625;
+}
