--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ body {
 
 @media screen and (max-width: 1100px) {
   .detail-image {
-    width:  max(50vw, 300px);
+    width: max(50vw, 300px);
     height: max(50vw, 300px);
   }
 
@@ -140,22 +140,21 @@ body {
   }
 }
 
-
-.slick-list{
-    height: 320px;
-    padding-top: 20px;
-    padding-right: 20px;
+.slick-list {
+  height: 320px;
+  padding-top: 20px;
+  padding-right: 20px;
 }
 
-.slick-arrow.slick-prev{
+.slick-arrow.slick-prev {
   background-color: #000;
 }
 
-.slick-arrow.slick-next{
+.slick-arrow.slick-next {
   background-color: #000;
 }
 
-.slick-slide.slick-active{
+.slick-slide.slick-active {
   /* background-color: #000; */
   display: flex;
   justify-content: center;
@@ -173,16 +172,16 @@ body {
   font-size: 1.2rem;
   gap: 5px;
 }
-.pagination .page-num{
+.pagination .page-num {
   padding: 8px 15px;
   cursor: pointer;
   border-radius: 3px;
   font-weight: 400;
 }
-.pagination .page-num:hover{
-  background-color: #FF2625;
-  color:#fff;
+.pagination .page-num:hover {
+  background-color: #ff2625;
+  color: #fff;
 }
 .pagination .active {
-  background-color: #FF2625;
+  background-color: #ff2625;
 }
