--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --arrow-size: 60px;
+}
+
 body {
   font-family: "Josefin Sans";
   background-color: #fffafb;
@@ -13,39 +17,12 @@ body {
   width: 0px;
 }
 
-.right-arrow,
-.left-arrow {
-  cursor: pointer;
-  background: transparent;
-  outline: none;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ff2625;
-  font-size: 25px;
-  border-radius: 4px;
-  position: absolute;
-  bottom: -20px;
-  right: 80px;
-  transform: scale(1, 1);
-  transition: 0.3s all ease-in-out;
-}
-
-.right-arrow {
-  right: 140px;
-}
-
-.right-arrow:hover,
-.left-arrow:hover {
-  transform: scale(1.3, 1.3);
-}
-
+/*
 .react-horizontal-scrolling-menu--wrapper {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-}
+} */
 
 .detail-image {
   width: 729px;
@@ -105,45 +82,6 @@ body {
   text-decoration: none;
 }
 
-@media screen and (max-width: 1100px) {
-  .detail-image {
-    width: max(50vw, 300px);
-    height: max(50vw, 300px);
-  }
-
-  .react-horizontal-scrolling-menu--scroll-container {
-    width: 500px;
-  }
-
-  .left-arrow,
-  .right-arrow {
-    position: static !important;
-  }
-
-  .hero-banner-img {
-    display: none;
-  }
-
-  .exercise-card {
-    width: 320px;
-  }
-
-  .exercise-video {
-    width: 320px;
-    height: 300px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .exercise-card {
-    width: 280px;
-  }
-
-  .details-slider {
-    width: 80vw;
-  }
-}
-
 /* home page slider */
 
 .home-page-slider .slick-list {
@@ -152,12 +90,28 @@ body {
   padding-right: 20px;
 }
 
-.home-page-slider .slick-arrow.slick-prev {
-  background-color: #000;
+.slick-arrow.slick-prev {
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  width: var(--arrow-size);
+  height: var(--arrow-size);
+  z-index: 10;
+  background-image: url("./assets/icons/left-arrow1.svg");
+  background-repeat: no-repeat;
+  background-size: var(--arrow-size) var(--arrow-size);
 }
 
-.home-page-slider .slick-arrow.slick-next {
-  background-color: #000;
+.slick-arrow.slick-next {
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  width: var(--arrow-size);
+  height: var(--arrow-size);
+  z-index: 10;
+  background-image: url("./assets/icons/right-arrow1.svg");
+  background-repeat: no-repeat;
+  background-size: var(--arrow-size) var(--arrow-size);
 }
 
 .home-page-slider .slick-slide.slick-active {
@@ -181,16 +135,6 @@ body {
   padding-bottom: 100px;
 }
 
-.details-slider .slick-arrow.slick-prev {
-  background-color: #000;
-  z-index: 10;
-}
-
-.details-slider .slick-arrow.slick-next {
-  background-color: #000;
-  z-index: 10;
-}
-
 .details-slider .slick-slide.slick-active {
   /* background-color: #000; */
   display: flex;
@@ -201,6 +145,7 @@ body {
 /* pagination styling */
 
 .pagination {
+  font-family: "Open Sans", sans-serif;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -208,12 +153,31 @@ body {
   margin-bottom: 5rem;
   font-size: 1.2rem;
   gap: 5px;
+  font-weight: 600;
 }
+
+.pagination .next {
+  padding: 8px 8px;
+  border-radius: 3px;
+  background-color: #ff2625;
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.pagination .previous {
+  padding: 8px 8px;
+  border-radius: 3px;
+  background-color: #ff2625;
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
 .pagination .page-num {
   padding: 8px 15px;
   cursor: pointer;
   border-radius: 3px;
-  font-weight: 400;
 }
 .pagination .page-num:hover {
   background-color: #ff2625;
@@ -221,10 +185,70 @@ body {
 }
 .pagination .active {
   background-color: #ff2625;
+  color: #fff;
+}
+
+@media screen and (max-width: 1100px) {
+  .detail-image {
+    width: max(50vw, 300px);
+    height: max(50vw, 300px);
+  }
+
+  .react-horizontal-scrolling-menu--scroll-container {
+    width: 500px;
+  }
+
+  .exercise-card {
+    width: 320px;
+  }
+
+  .exercise-video {
+    width: 320px;
+    height: 300px;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .details-slider {
     width: 75vw;
+  }
+
+  .pagination {
+    font-size: 1rem;
+    gap: 2px;
+  }
+
+  .pagination .page-num {
+    padding: 8px 7px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .exercise-card {
+    width: 280px;
+  }
+
+  .details-slider {
+    width: 80vw;
+  }
+
+  .pagination .next {
+    padding: 8px 8px;
+    font-size: 1.2rem;
+  }
+
+  .pagination .previous {
+    padding: 8px 8px;
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .pagination {
+    font-size: 0.85rem;
+  }
+
+  .pagination .page-num {
+    padding: 8px 5px;
   }
 }
