fix - enter to search, current page indicator

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   --arrow-size: 50px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Josefin Sans";
   background-color: #fffafb;
